# bayesian-view-deep-representations

./: .gitignore  INSTRUCTION_build.md  INSTRUCTION_cnns.md  INSTRUCTION_vaes.md  README.md  base_settings.py  cifar_corrupted_labels.json  imagenet_corrupted_labels.json  ld_11.json  ld_8.json  reproduce.yml  tf2.yml  tf_mkl.yml
datasets/: anime.py  celeb.py  chairs3d.py  cifar10.py  mini_imagenet.py  mini_imagenet84x84.py
datasets/scripts/: save_celeb_ds_to_array.py
datasets/tests/: test_mini_imagenet.py
scripts/: check_svd_dim_for_data.py  do_clustering_on_npy_arr.py  do_clustering_on_two_data_dirs.py  do_dim_reduction_with_svd.py  extract_activations_on_dataset.py  extract_filterbank.py
scripts/datamunging/: extract_models_from_experiment.py  recreate_labels_for_train_set.py
scripts/results_analysis/: calculate_cluster_counts.py  check_accuracy_for_models.py  estimate_entropy_from_clustering.py  fetch_eigact_clustering_results.py  fetch_eigrepr_clustering_results.py  generate_eigact_pdf_report.py  generate_heatmap_for_results.py
src/: loss.py  modules.py  settings.py  transforms.py
src/experiments/: settings.py  train_cnn.py
src/models/: baidu_net.py  cca_cnn.py  mlp.py
src/models/clustering/lib/tf_cholesky_date/: CMakeLists.txt  README.md  test.py
src/models/clustering/lib/tf_cholesky_date/include/: cholesky_date.h
src/models/clustering/lib/tf_cholesky_date/src/: cholesky_date.cc  cholesky_date.cu
src/optimizers/: radam.py
utils/: file_system.py  img_ops.py  logging.py  prob_utils.py  tf_ops.py
utils/reports/: pdf_generation.py
utils/tests/: test_tf_ops.py
(+46 files in other folders)
